[tool.poetry]
name = "pybins"
version = "0.1.0"
description = ""
authors = ["None"]

[tool.poetry.dependencies]
python = "^3.10"
black = "*"
certbot = [
{version = "*"},
#{version = "^1.0"},
#{version = "<= 1.17.0"},
]
cryptography = [
{version = "*"},
{version = "!= 37.0.3"},
]
certbot-dns-route53 = "*"
flake8 = "*"
ipython = "*"
isort = "*"
pyls-flake8 = "*"
pyls-isort = "*"
pylsp-mypy = "*"
pymongo = {extras = ["srv"], version = "*"}
pynvim = "*"
python-lsp-black = "*"
python-lsp-server = {extras = ["flake8", "rope"], version = "*"}
speedtest-cli = "*"
spotdl = "*"
youtube_dl = "*"
ansible = "^5.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
