[tool.poetry]
name = "pybins"
version = "0.1.0"
description = ""
authors = ["None"]

[tool.poetry.dependencies]
python = "^3.10"
ansible = "*"
awscli = "*"
black = "*"
certbot = "*"
flake8 = "*"
ipython = "*"
isort = "*"
pyls-flake8 = "*"
pyls-isort = "*"
pylsp-mypy = "*"
pymongo = {extras = ["srv"], version = "*"}
pynvim = "*"
python-lsp-black = "*"
python-lsp-server = {extras = ["flake8", "rope"], version = "*"}
speedtest-cli = "*"
spotdl = "*"
youtube_dl = "*"
weasyprint = "^56.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
