[tool.poetry]
name = "pybins"
version = "0.1.0"
description = ""
authors = ["None"]

[tool.poetry.dependencies]
python = "^3.10"
ansible = "*"
black = "*"
certbot = "*"
certbot-dns-route53 = "*"
flake8 = "*"
ipython = "*"
isort = "*"
jedi = "*"
mypy = "*"
pyls-flake8 = "*"
pylsp-mypy = "*"
pymongo = {extras = ["srv"], version = "*"}
pynvim = "*"
python-lsp-server = {extras = ["flake8", "rope"], version = "*"}
speedtest-cli = "*"
spotdl = "*"
weasyprint = "^56.1"
youtube_dl = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
